--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
-              <div class="outcome outcome--left hidden">
+              <div class="outcome outcome--right hidden">
                 <h3 class="heading-tertiary">What you'll learn</h3>
                 <ul class="outcome-list">
                   <li class="outcome-item">
@@ -387,6 +387,251 @@
         </div>
       </section>
       <!-- End of Testimony section -->
+
+      <!-- About Us -->
+      <section class="about-us-section">
+        <div class="container">
+          <div class="textbox">
+            <p class="sub-heading">GET TO MEET US</p>
+            <h2 class="heading-tertiary">Look at what we've been up to...</h2>
+          </div>
+
+          <div class="gallery grid grid-4-col">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text>
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text>
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text></svg
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 450 300"
+              class="img-fluid rounded mx-auto d-block"
+              width="450"
+              height="300"
+            >
+              <rect width="450" height="300" fill="#cccccc"></rect>
+              <text
+                x="50%"
+                y="50%"
+                dominant-baseline="middle"
+                text-anchor="middle"
+                font-family="monospace"
+                font-size="26px"
+                fill="#333333"
+              >
+                450x300
+              </text>
+            </svg>
+          </div>
+        </div>
+      </section>
+      <!-- End of About Us -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="./js/script.js"></script>
