--- a/index.html
+++ b/index.html
@@ -397,237 +397,270 @@
           </div>
 
           <div class="gallery grid grid-4-col">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text>
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text>
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text></svg
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 450 300"
-              class="img-fluid rounded mx-auto d-block"
-              width="450"
-              height="300"
-            >
-              <rect width="450" height="300" fill="#cccccc"></rect>
-              <text
-                x="50%"
-                y="50%"
-                dominant-baseline="middle"
-                text-anchor="middle"
-                font-family="monospace"
-                font-size="26px"
-                fill="#333333"
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
+            <div class="img-box">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 450 300"
+                class="img-fluid rounded mx-auto d-block"
+                width="450"
+                height="300"
               >
-                450x300
-              </text>
-            </svg>
+                <rect width="450" height="300" fill="#cccccc"></rect>
+                <text
+                  x="50%"
+                  y="50%"
+                  dominant-baseline="middle"
+                  text-anchor="middle"
+                  font-family="monospace"
+                  font-size="26px"
+                  fill="#333333"
+                >
+                  450x300
+                </text>
+              </svg>
+            </div>
           </div>
         </div>
       </section>
