--- a/index.html
+++ b/index.html
@@ -662,6 +662,10 @@
               </svg>
             </div>
           </div>
+
+          <div class="textbox">
+            <h2 class="heading-tertiary">Meet our tutor...</h2>
+          </div>
         </div>
       </section>
       <!-- End of About Us -->
